hphp/hack/test/typecheck/inout/bad_inout_hint_return1.php.exp
File "bad_inout_hint_return1.php", line 4, characters 10-18:
Invalid return type (Typing[4184])
File "bad_inout_hint_return1.php", line 3, characters 33-35:
This is an inout parameter
File "bad_inout_hint_return1.php", line 4, characters 10-11:
It is incompatible with a normal parameter
